Creación PerfilUsuario y correción fallo Login y creación/modificación Usuarios

--- a/src-frontend/src/app/admin-dash/admin-dash.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash.component.html
@@ -1,19 +1,20 @@
 <div class="adminDash">
-  <app-admin-sidebar></app-admin-sidebar>
-  <div class="container-fluid header-bg">
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1 class="mt-5">¡Bienvenido al Dashboard del Administrador!</h1>
-            <p class="lead">Gestiona usuarios, proyectos y notas de los usuarios de BLUE BULL</p>
-            <p>Este panel de control te permite administrar todas las funciones y aspectos de la aplicación de manera centralizada y conveniente.</p>
-            <p>Desde aquí, puedes:</p>
-            <ul class="list-unstyled">
-                <li>Agregar, editar o eliminar usuarios.</li>
-                <li>Agregar, editar o eliminar proyectos</li>
-                <li>Supervisar las tareas de los proyectos.</li>
-            </ul>
-            <p>¡Explora todas las funcionalidades que el rol de Gestor/Administrador ofrece!</p>
+    <app-admin-sidebar></app-admin-sidebar>
+    <div class="container-fluid header-bg">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1 class="mt-5">¡Bienvenido al Dashboard del Administrador!</h1>
+                <p class="lead">Gestiona usuarios, proyectos y notas de los usuarios de BLUE BULL</p>
+                <p>Este panel de control te permite administrar todas las funciones y aspectos de la aplicación de
+                    manera centralizada y conveniente.</p>
+                <p>Desde aquí, puedes:</p>
+                <ul class="list-unstyled">
+                    <li>Agregar, editar o eliminar usuarios.</li>
+                    <li>Agregar, editar o eliminar proyectos</li>
+                    <li>Supervisar las tareas de los proyectos.</li>
+                </ul>
+                <p>¡Explora todas las funcionalidades que el rol de Gestor/Administrador ofrece!</p>
+            </div>
         </div>
     </div>
-</div>
 </div>
