--- a/src-frontend/src/app/admin-dash/admin-dash-list-proyects/admin-dash-list-proyects.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-list-proyects/admin-dash-list-proyects.component.html
@@ -5,7 +5,7 @@
       <div class="align-items-center">
         <div class="justify-content-center">
           <div class="d-flex justify-content-end mb-3" style="margin: 30px;">
-            <button class="btn btn-success" >Crear Proyecto</button>
+            <button class="btn btn-success" [routerLink]="['/adminDash/crearProyecto']" routerLinkActive="active">Crear Proyecto</button>
           </div>
           <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
             style="position: relative; height: 445px;">
