--- a/src-frontend/src/app/admin-dash/admin-dash-mod-proyects/admin-dash-mod-proyects.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-mod-proyects/admin-dash-mod-proyects.component.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary me-2" (click)="confirmarModProyecto()">Guardar Cambios</button>
+            <button type="submit" class="btn btn-primary me-2" (click)="modificarProyecto()">Guardar Cambios</button>
         </div>
     </form>
 </div>
@@ -103,7 +103,7 @@
 </div>
 
 <div id="id02" class="modal">
-    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
+    <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">×</span>
     <form class="modal-content">
         <div class="container">
             <h1>Nuevo Usuario</h1>
