--- a/src-frontend/src/app/content/content.component.html
+++ b/src-frontend/src/app/content/content.component.html
@@ -1,39 +1,35 @@
-<br>
-<br>
-<div class="section padding-top-big padding-bottom over-hide">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 section-title-wrap text-center parallax-fade-top">
-                <h1>Rellenar con cosas <br>de ejemplo</h1>
+<div>
+    <h1 class="titulo">¿Qué es lo que puedes hacer en esta aplicación?</h1>
+    <div class="content">
+        <section class="first">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Un espacio de trabajo solo para ti</h2>
+                        <p>Sientete libre de guardar todas tus ideas en un espacio centralizado, donde podrás guardar todas esas ideas locas que no sabes donde dejar</p>
+                    </div>
+                    <div class="col-lg-6" style="text-align: center;">
+                        <img src="https://cdn-icons-png.flaticon.com/512/6681/6681441.png" class="img-fluid"
+                            alt="Explora tus Intereses" class="notas">
+                    </div>
+                </div>
             </div>
-        </div>	
+        </section>
+        <section class="first">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6" style="text-align: center;">
+                        <img src="../../../assets/notas.png" class="img-fluid" alt="Construye tu Perfil" class="grupo">
+                    </div>
+                    <div class="col-lg-6">
+                        <h2>Colabora en grupo para realizar</h2>
+                        <p>Unete a otros usuarios para llevar a cabo metas comunes o hacer realidad vuestras grandes ideas de manera organizada</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </div>
-<br>
-<br>
-<div class="section padding-bottom-big over-hide">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text-center mb-3" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-                <a href="#" class="cursor-link-blog-post-1">
-                    <div class="blog-post-box">
-                        <h5>Como un cartel de bienvenido o yo que se</h5>
-                        <p class="mb-0 mt-3">Texto de ejemplo</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 text-center mt-5 mb-3" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-                <a href="#" class="cursor-link-blog-post-2">
-                    <div class="blog-post-box">
-                        <h5>Quiero decí</h5>
-                        <p class="mb-0 mt-3">Er Pablo</p>
-                    </div>
-                </a>
-            </div>
-        </div>	
-    </div>
+<div>
+    <h1>Hermano haced hueco que aqui va el footer</h1>
 </div>
-
-
-
-
