--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -9,23 +9,36 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto py-4 py-md-0">
+              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a class="nav-link logged" routerLink="/home" routerLinkActive="active">Inicio</a>
+              </li>
               <!-- Si el usuario está autenticado -->
-              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                <a class="nav-link logged" routerLink="/adminDash" routerLinkActive="active">boton dashAdmin</a>
+              <li *ngIf="admin" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a class="nav-link logged" routerLink="/adminDash" routerLinkActive="active">Panel Administrador</a>
               </li>
               <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                <a class="nav-link logged" routerLink="/userDash" routerLinkActive="active">boton userPage</a>
+                <a class="nav-link logged" routerLink="/userDash" routerLinkActive="active">Boton prueba User</a>
               </li>
-              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                <a class="nav-link logged" routerLinkActive="active">{{ userEmail }}</a>
-              </li>
+              <!--
               <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                 <a class="nav-link logged" (click)="logout()">Cerrar Sesión</a>
               </li>
+              -->
               <!-- Si el usuario no está autenticado -->
               <li *ngIf="!isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                 <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a>
               </li>
+              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a [matMenuTriggerFor]="menu" class="nav-link logged" >
+                  {{ userEmail }}
+                </a>
+                <mat-menu #menu="matMenu" class="pepe">
+                  <button mat-menu-item routerLink="/perfil" routerLinkActive="active">Ver Perfil</button>
+                  <button mat-menu-item>Mis Notas</button>
+                  <button mat-menu-item>Mis Proyectos</button>
+                  <button mat-menu-item (click)="logout()">Cerrar sesión</button>
+                </mat-menu>
+            </li>
             </ul>
           </div>
         </nav>
@@ -33,6 +46,3 @@
     </div>
   </div>
 </div>
-
-<!-- Si el usuario está autenticado, mostrar su correo electrónico -->
-
