--- a/src-frontend/src/app/user-dash/user-dash.component.html
+++ b/src-frontend/src/app/user-dash/user-dash.component.html
@@ -26,3 +26,13 @@
 </div>
 
 <button (click)="mostrarElementos()">Mostrar Elementos</button>
+
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+
