--- a/src-frontend/src/app/admin-dash/admin-dash-list-users/admin-dash-list-users.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-list-users/admin-dash-list-users.component.html
@@ -9,7 +9,7 @@
               Usuario</button>
           </div>
           <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
-            style="position: relative; height: 445px;">
+            style="position: relative; height: 70vh;">
             <table class="table .centered-table">
               <thead>
                 <tr>
@@ -55,23 +55,42 @@
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
     <form class="modal-content">
       <div class="container">
-        <h1 style="color: #f44336;">Borrando Usuario {{ usuarioBorradoID }} - {{ usuarioBorradoEmail }}</h1>
+        <h1>Borrando Usuario {{ usuarioBorradoID }} - {{ usuarioBorradoEmail }}</h1>
         <p>¿Estás seguro de que deseas borrar este usuario?</p>
         <div class="clearfix">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancelar</button>
-          <button type="button" (click)="ocultarElemento('id01'); borrarUsuario(usuarioBorradoID)" class="deletebtn">Borrar</button>
+          <button type="button" onclick="document.getElementById('id01').style.display='none'"
+            class="cancelbtn">Cancelar</button>
+          <button type="button" (click)="ocultarElemento('id01'); borrarUsuario(usuarioBorradoID)"
+            class="deletebtn">Borrar</button>
         </div>
       </div>
     </form>
   </div>
 
-  <script>
-    var modal = document.getElementById('id01');
+  <div id="myModal" class="modal" [ngClass]="{'show': isModalOpen}">
+    <div class="modal-content">
+      <span class="close" (click)="closeModal()">&times;</span>
+      <h1>Borrando Usuario {{ usuarioBorradoID }} - {{ usuarioBorradoEmail }}</h1>
+      <p>¿Estás seguro que quieres borrar?</p>
+      <div class="buttons">
+        <button class="btn confirm" (click)="confirmAction(); borrarUsuario(usuarioBorradoID)">Confirmar</button>
+        <button class="btn cancel" (click)="closeModal()">Cancelar</button>
+      </div>
+    </div>
+  </div>
 
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-  </script>
+  <div id="myModal1" class="modal" [ngClass]="{'show': isModalCerrar}">
+    <div class="modal-content">
+      <span class="close" (click)="closeModalCerrar()">&times;</span>
+      <div class="check-animation">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+          <circle cx="26" cy="26" r="25" fill="none" />
+          <path fill="none" stroke="#ffffff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" d="M14 27l5 5 14-14" class="check-svg"/>
+        </svg>
+      </div>
+      <p>Se ha realizado la acción satisfactorimente</p>
+      <button class="btnCerrar" (click)="closeModalCerrar()">Cerrar</button>
+    </div>
+  </div>
+
 </div>
